class Subject:
    "Representa una materia."

    def __init__(self, name: str):
        self.name = name

    def __str__(self) -> str:
        return self.name
