@startuml SISTEMA DE NOTAS

class Student {
  - name: str
  - grades: dict[str, list[float]]
  - finalGrades: dict[str, float]
  - average: float
  + addGrade(subjectName: str, period: int, grade: float, periodCount: int): None
  + calculateFinalGrade(subjectName: str): float
  + calculateAverage(): float
}

class Subject {
  - name: str
  + __str__(): str
}

class GradeSystem {
  - students: list[Student]
  - subjects: list[Subject]
  - periodCount: int
  - courseAverage: float
  - failedByPeriod: dict[int, int]
  - failedFinal: int
  - approvalPercentage: float
  - failurePercentage: float
  - studentAveragesVector: list[float]
  - failedByPeriodVector: list[int]
  - finalGradesMatrix: list[list[float]]
  + registerPeriods(): None
  + registerSubjects(): None
  + registerStudents(): None
  + requestGrades(): None
  + calculateFinalGrades(): None
  + buildStudentAveragesVector(): list[float]
  + buildFailedByPeriodVector(): list[int]
  + buildFinalGradesMatrix(): list[list[float]]
  + calculateCourseAverage(): float
  + calculateStatistics(): None
  + displayData(): None
}

class Validator {
  + requestInteger(message: str): int
  + requestText(message: str): str
  + requestGrade(message: str): float
  + getEquivalentLetter(grade: float): str
  + buildLetterWithSign(grade: float, rangeStart: float, rangeEnd: float, letter: str): str
}

GradeSystem "1" --> "*" Student
GradeSystem "1" --> "*" Subject
GradeSystem ..> Validator
@enduml
